force-app/main/default/objects/dataInvoicingInformation__c/dataInvoicingInformation__c.object-meta.xml
<CustomObject>
    <label>Invoicing Information</label>
    <nameField>
        <label>Invoicing Information</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoicing Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>