force-app/main/default/objects/dataInvoicingInformation__c/fields/abr__c.field-meta.xml
<CustomField>
    <fullName>abr__c</fullName>
    <label>abr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>