force-app/main/default/objects/dataInvoicingInformation__c/fields/ank__c.field-meta.xml
<CustomField>
    <fullName>ank__c</fullName>
    <label>ank</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>