force-app/main/default/objects/dataInvoicingInformation__c/fields/arnm__c.field-meta.xml
<CustomField>
    <fullName>arnm__c</fullName>
    <label>arnm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>