force-app/main/default/objects/dataInvoicingInformation__c/fields/arns__c.field-meta.xml
<CustomField>
    <fullName>arns__c</fullName>
    <label>arns</label>
    <length>255</length>
    <type>Text</type>
</CustomField>