force-app/main/default/objects/dataInvoicingInformation__c/fields/auth__c.field-meta.xml
<CustomField>
    <fullName>auth__c</fullName>
    <label>auth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>