force-app/main/default/objects/dataInvoicingInformation__c/fields/batchFileLineId__c.field-meta.xml
<CustomField>
    <fullName>batchFileLineId__c</fullName>
    <externalId>true</externalId>
    <label>batchFileLineId</label>
    <length>28</length>
    <type>Text</type>
</CustomField>