force-app/main/default/objects/dataInvoicingInformation__c/fields/ccnr__c.field-meta.xml
<CustomField>
    <fullName>ccnr__c</fullName>
    <label>ccnr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>