force-app/main/default/objects/dataInvoicingInformation__c/fields/cle__c.field-meta.xml
<CustomField>
    <fullName>cle__c</fullName>
    <label>cle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>