force-app/main/default/objects/dataInvoicingInformation__c/fields/corrid__c.field-meta.xml
<CustomField>
    <fullName>corrid__c</fullName>
    <label>corrid</label>
    <type>TextArea</type>
</CustomField>