force-app/main/default/objects/dataInvoicingInformation__c/fields/crda__c.field-meta.xml
<CustomField>
    <fullName>crda__c</fullName>
    <label>crda</label>
    <type>Date</type>
</CustomField>