force-app/main/default/objects/dataInvoicingInformation__c/fields/crti__c.field-meta.xml
<CustomField>
    <fullName>crti__c</fullName>
    <label>crti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>