force-app/main/default/objects/dataInvoicingInformation__c/fields/cuda__c.field-meta.xml
<CustomField>
    <fullName>cuda__c</fullName>
    <label>cuda</label>
    <type>Date</type>
</CustomField>