force-app/main/default/objects/dataInvoicingInformation__c/fields/cuti__c.field-meta.xml
<CustomField>
    <fullName>cuti__c</fullName>
    <label>cuti</label>
    <length>255</length>
    <type>Text</type>
</CustomField>