force-app/main/default/objects/dataInvoicingInformation__c/fields/ext1__c.field-meta.xml
<CustomField>
    <fullName>ext1__c</fullName>
    <label>ext1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>