force-app/main/default/objects/dataInvoicingInformation__c/fields/ext2__c.field-meta.xml
<CustomField>
    <fullName>ext2__c</fullName>
    <label>ext2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>