force-app/main/default/objects/dataInvoicingInformation__c/fields/hewa__c.field-meta.xml
<CustomField>
    <fullName>hewa__c</fullName>
    <label>hewa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>