force-app/main/default/objects/dataInvoicingInformation__c/fields/hkur__c.field-meta.xml
<CustomField>
    <fullName>hkur__c</fullName>
    <label>hkur</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>