force-app/main/default/objects/dataInvoicingInformation__c/fields/hwkz__c.field-meta.xml
<CustomField>
    <fullName>hwkz__c</fullName>
    <label>hwkz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>