force-app/main/default/objects/dataInvoicingInformation__c/fields/inty__c.field-meta.xml
<CustomField>
    <fullName>inty__c</fullName>
    <label>inty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>