force-app/main/default/objects/dataInvoicingInformation__c/fields/kdnr__c.field-meta.xml
<CustomField>
    <fullName>kdnr__c</fullName>
    <label>kdnr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>