force-app/main/default/objects/dataInvoicingInformation__c/fields/kste__c.field-meta.xml
<CustomField>
    <fullName>kste__c</fullName>
    <label>kste</label>
    <length>255</length>
    <type>Text</type>
</CustomField>