force-app/main/default/objects/dataInvoicingInformation__c/fields/mamo__c.field-meta.xml
<CustomField>
    <fullName>mamo__c</fullName>
    <label>mamo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>