force-app/main/default/objects/dataInvoicingInformation__c/fields/mnum__c.field-meta.xml
<CustomField>
    <fullName>mnum__c</fullName>
    <label>mnum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>