force-app/main/default/objects/dataInvoicingInformation__c/fields/mser__c.field-meta.xml
<CustomField>
    <fullName>mser__c</fullName>
    <label>mser</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>