force-app/main/default/objects/dataInvoicingInformation__c/fields/mstp__c.field-meta.xml
<CustomField>
    <fullName>mstp__c</fullName>
    <label>mstp</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>