force-app/main/default/objects/dataInvoicingInformation__c/fields/mtag__c.field-meta.xml
<CustomField>
    <fullName>mtag__c</fullName>
    <label>mtag</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>