force-app/main/default/objects/dataInvoicingInformation__c/fields/nlb2__c.field-meta.xml
<CustomField>
    <fullName>nlb2__c</fullName>
    <label>nlb2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>