force-app/main/default/objects/dataInvoicingInformation__c/fields/nlb__c.field-meta.xml
<CustomField>
    <fullName>nlb__c</fullName>
    <label>nlb</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>