force-app/main/default/objects/dataInvoicingInformation__c/fields/nlp2__c.field-meta.xml
<CustomField>
    <fullName>nlp2__c</fullName>
    <label>nlp2</label>
    <length>28</length>
    <type>Text</type>
</CustomField>