force-app/main/default/objects/dataInvoicingInformation__c/fields/nlp__c.field-meta.xml
<CustomField>
    <fullName>nlp__c</fullName>
    <label>nlp</label>
    <length>28</length>
    <type>Text</type>
</CustomField>