force-app/main/default/objects/dataInvoicingInformation__c/fields/rlab__c.field-meta.xml
<CustomField>
    <fullName>rlab__c</fullName>
    <label>rlab</label>
    <length>255</length>
    <type>Text</type>
</CustomField>