force-app/main/default/objects/dataInvoicingInformation__c/fields/rlan__c.field-meta.xml
<CustomField>
    <fullName>rlan__c</fullName>
    <label>rlan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>