force-app/main/default/objects/dataInvoicingInformation__c/fields/rna1__c.field-meta.xml
<CustomField>
    <fullName>rna1__c</fullName>
    <label>rna1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>