force-app/main/default/objects/dataInvoicingInformation__c/fields/rna2__c.field-meta.xml
<CustomField>
    <fullName>rna2__c</fullName>
    <label>rna2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>