force-app/main/default/objects/dataInvoicingInformation__c/fields/rna3__c.field-meta.xml
<CustomField>
    <fullName>rna3__c</fullName>
    <label>rna3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>