force-app/main/default/objects/dataInvoicingInformation__c/fields/rort__c.field-meta.xml
<CustomField>
    <fullName>rort__c</fullName>
    <label>rort</label>
    <length>255</length>
    <type>Text</type>
</CustomField>