force-app/main/default/objects/dataInvoicingInformation__c/fields/rplz__c.field-meta.xml
<CustomField>
    <fullName>rplz__c</fullName>
    <label>rplz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>