force-app/main/default/objects/dataInvoicingInformation__c/fields/seco__c.field-meta.xml
<CustomField>
    <fullName>seco__c</fullName>
    <label>seco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>