force-app/main/default/objects/dataInvoicingInformation__c/fields/stb2__c.field-meta.xml
<CustomField>
    <fullName>stb2__c</fullName>
    <label>stb2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>