force-app/main/default/objects/dataInvoicingInformation__c/fields/stb__c.field-meta.xml
<CustomField>
    <fullName>stb__c</fullName>
    <label>stb</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>