force-app/main/default/objects/dataInvoicingInformation__c/fields/stnr__c.field-meta.xml
<CustomField>
    <fullName>stnr__c</fullName>
    <label>stnr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>