force-app/main/default/objects/dataInvoicingInformation__c/fields/stor__c.field-meta.xml
<CustomField>
    <fullName>stor__c</fullName>
    <label>stor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>