force-app/main/default/objects/dataInvoicingInformation__c/fields/stp2__c.field-meta.xml
<CustomField>
    <fullName>stp2__c</fullName>
    <label>stp2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>