force-app/main/default/objects/dataInvoicingInformation__c/fields/stp__c.field-meta.xml
<CustomField>
    <fullName>stp__c</fullName>
    <label>stp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>