force-app/main/default/objects/dataInvoicingInformation__c/fields/uid__c.field-meta.xml
<CustomField>
    <fullName>uid__c</fullName>
    <label>uid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>