force-app/main/default/objects/dataInvoicingInformation__c/fields/vdat__c.field-meta.xml
<CustomField>
    <fullName>vdat__c</fullName>
    <label>vdat</label>
    <length>5</length>
    <type>Text</type>
</CustomField>