force-app/main/default/objects/dataInvoicingInformation__c/fields/vonr__c.field-meta.xml
<CustomField>
    <fullName>vonr__c</fullName>
    <label>vonr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>