force-app/main/default/objects/dataInvoicingInformation__c/fields/vto__c.field-meta.xml
<CustomField>
    <fullName>vto__c</fullName>
    <label>vto</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>