force-app/main/default/objects/dataInvoicingInformation__c/fields/wakz__c.field-meta.xml
<CustomField>
    <fullName>wakz__c</fullName>
    <label>wakz</label>
    <length>255</length>
    <type>Text</type>
</CustomField>