force-app/main/default/objects/dataInvoicingInformation__c/fields/zah__c.field-meta.xml
<CustomField>
    <fullName>zah__c</fullName>
    <label>zah</label>
    <length>255</length>
    <type>Text</type>
</CustomField>