force-app/main/default/objects/dataInvoicingInformation__c/fields/zreg__c.field-meta.xml
<CustomField>
    <fullName>zreg__c</fullName>
    <label>zreg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>